================================ Next release ================================

========================== Release 0.5.6 2013-04-09 ==========================

Bug fixes:
    - A regression in 0.5.5 broke customization of logging.

========================== Release 0.5.5 2013-04-09 ==========================

Bug fixes:
    - Specifying a custom reactor with the "-r"-argument to piped should now
      work again.

Features:
    - The constructor of ``piped.event.Event`` now takes a single keyword
      argument: ``async``, which, if ``True`` makes ``.__call__`` return
      a deferred which callbacks when all the listeners have finished
      processing the event.

========================== Release 0.5.3 2013-01-06 ==========================

Features:
    - New StatsD-contrib that handles one or more statsd-connections, as well
      as a reporter-service for various process metrics.

    - ZooKeeper-contrib now authenticates and creates nodes with default ACLs.

    - ZooKeeper-client learned create_recursive.


========================== Release 0.5.2 2012-12-01 ==========================

Features:
    - PostgresListener now knows about advisory locks.

    - The database-contrib now has a service-module with two
      PostgresListener-base-classes, for making services that should react to
      Postgres-notifications.

    - ``piped.util`` gained a contextual ``DeferredLock`` and a
      ``BackoffWaiter``.

Bug fixes:
    - ``piped.contrib.zookeeper`` attempted to log a line with formatting errors
      after connecting to ZooKeeper.

========================== Release 0.5.1 2012-11-16 ==========================

Bug fixes:
    - ``p.util.Cancellable.disown_cancellable_parent_callback`` now correctly
      passes the return value through.

    - The ZooKeeper provider should now parse multiple servers with chroots
      correctly.

========================== Release 0.5.0 2012-09-23 ==========================

Features: