@@ -1,5 +1,14 @@
 ================================ Next release ================================
 
+========================== Release 0.5.7 2014-03-24 ==========================
+
+Features:
+    - The zookeeper-contrib now accepts a parameter, ``default_encoded_acls``,
+      which is expected to be a list of pre-encoded ACLs. This is the
+      recommended way of passing default ACLs to clients provided by this
+      provider since it doesn't need to know the exact passwords for these
+      ACLs, just their base64-encoded hashes.
+
 ========================== Release 0.5.6 2013-04-09 ==========================
 
 Bug fixes:
